# disaster-relief-satellite-hub

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  UDARP.md  UltrasonicRangeExtension.md
client/: index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx  UDARP.jsx  history.json  index.css
client/src/lib/: keyGen.js
client/src/test/: UDARP.test.js  setup.js
include/business/: business_interface.h  recipient_interface.h
include/devices/: local_communication.h
include/network/: satellite_hub.h
src/: main.cpp
src/business/: business_interface.cpp  recipient_interface.cpp
src/devices/: local_communication.cpp
src/network/: satellite_hub.cpp
tests/: CMakeLists.txt  main.cpp  test_listing_feature.cpp  test_preorder_feature.cpp  test_satellite_communication.cpp  test_ultrasonic_communication.cpp
